--- a/latex_docu/documention.tex
+++ b/latex_docu/documention.tex
@@ -21,26 +21,35 @@
 
 \title{Projectdocumentation for Open Environemental Data Cloud Prototyping Project}
 %
-\titlerunning{Test}  % abbreviated title (for running head)
+\titlerunning{Open Data}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Nico Tasche, ....}
+\author{Andres Ardila, Rohullah Ayobi, Oliver Bruski, Amer Jazaerli, Nico Tasche, Paul Wille}
 
-\institute{Technische Universitaet Berlin, Straße des 17. Juni 135, 10623 Berlin, Germany,\\
-\email{nico.tasche@campus.tu-berlin.de}}
+\institute{Technische Universit\"at Berlin, Stra\ss{}e des 17. Juni 135, 10623 Berlin, Germany,\\
+\email{firstname.lastname@campus.tu-berlin.de}}
 
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
 \keywords{Open Data, Environemental Data, Big Data}
 \end{abstract}
-%
+
+\pagebreak
+
+\tableofcontents
+
+%%%%%%%%%%%%%%%%%%%%%%%
+%% Content %%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%
+
 \input{01/doc.tex}
 \input{02/doc.tex}
 \input{03/doc.tex}
 %\input{04/doc.tex}
 \input{05/doc.tex}
+\input{05a/doc.tex}
 \input{06/doc.tex}
 \input{07/doc.tex}
 \input{08/doc.tex}
