--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -41,6 +41,7 @@
 \tableofcontents
 
 \clearpage
+
 %%%%%%%%%%%%%%%%%%%%%%%
 %% Content %%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -48,7 +49,7 @@
 \input{01/doc.tex}
 \input{02/doc.tex}
 \input{03/doc.tex}
-%\input{04/doc.tex}
+\input{04/doc.tex}
 \input{05/doc.tex}
 \input{05a/doc.tex}
 \input{06/doc.tex}
